--- a/29_CSS_Animation_TWO/index.html
+++ b/29_CSS_Animation_TWO/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS Animation TWO</title>
+    <title>CSS Animation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
