--- a/29_CSS_Animation_TWO/index.html
+++ b/29_CSS_Animation_TWO/index.html
@@ -8,13 +8,14 @@
 <body>
 
      <div>
-         <span>W</span>
-         <span>E</span>
-         <span>L</span>
-         <span>C</span>
-         <span>O</span>
-         <span>M</span>
-         <span>E</span>
+         <span>P</span>
+         <span>R</span>
+         <span>A</span>
+         <span>B</span>
+         <span>H</span>
+         <span>A</span>
+         <span>S</span>
+         <span>H</span>
      </div>
 
 
